Colaboratory를 통해 생성됨

--- a/Colab_Notebook_GitHub_TRAINING_A_CLASSIFIER.ipynb
+++ b/Colab_Notebook_GitHub_TRAINING_A_CLASSIFIER.ipynb
@@ -6,7 +6,7 @@
       "name": " Colab  Notebook  GitHub TRAINING A CLASSIFIER",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNEnHKUhyy1BzgW/KYQZx1V",
+      "authorship_tag": "ABX9TyMcwoSu1HN+SG6ub87JeSmD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,8 @@
       "outputs": [],
       "source": [
         "#https://pytorch.org/tutorials/beginner/blitz/cifar10_tutorial.html\n",
-        "\n",
+        "#미니배치, 에폭의 관계 https://mole-starseeker.tistory.com/59\n",
+        " \n",
         "import torch\n",
         "import torchvision\n",
         "import torchvision.transforms as transforms\n"
